--- a/controllers/memberships/index.htm
+++ b/controllers/memberships/index.htm
@@ -1,2 +1,10 @@
+<div class="scoreboard">
+    <div data-control="toolbar">
+        <div class="scoreboard-item title-value">
+            <h4>Total memberships</h4>
+            <p>0</p>
+        </div>
+    </div>
+</div>
 
 <?= $this->listRender() ?>
