--- a/controllers/memberships/preview.htm
+++ b/controllers/memberships/preview.htm
@@ -7,8 +7,55 @@
 
 <?php if (!$this->fatalError): ?>
 
-    <div class="form-preview">
-        <?= $this->formRenderPreview() ?>
+    <div class="scoreboard">
+        <div data-control="toolbar">
+            <div class="scoreboard-item title-value">
+                <h4>Membership</h4>
+                <p># 1</p>
+                <p class="description">created: now</p>
+            </div>
+            <div class="scoreboard-item title-value">
+                <h4>Status</h4>
+                <p>Active</p>
+                <p class="description">since: now</p>
+            </div>
+            <div class="scoreboard-item title-value">
+                <h4>User</h4>
+                <p>Indiana Jones</p>
+                <p class="description">email: some@guy.com</p>
+            </div>
+        </div>
+    </div>
+
+    <div class="control-toolbar">
+        <div class="toolbar-item toolbar-primary loading-indicator-container">
+            <?= $this->makePartial('preview_toolbar') ?>
+        </div>
+    </div>
+
+    <div class="control-tabs content-tabs tabs-inset" data-control="tab">
+        <ul class="nav nav-tabs">
+            <li class="active"><a href="#membership">Membership</a></li>
+            <li><a href="#history">History</a></li>
+            <li><a href="#notifications">Notifications</a></li>
+        </ul>
+        <div class="tab-content">
+            <div class="tab-pane pane-inset active">
+                <div class="padded-container">
+                    <?= $this->makePartial('tab_membership') ?>
+                </div>
+            </div>
+            <div class="tab-pane pane-inset">
+                <div class="padded-container">
+                    <?= $this->makePartial('tab_history') ?>
+                </div>
+            </div>
+            <div class="tab-pane pane-inset">
+                <div class="padded-container">
+                    <?= $this->makePartial('tab_notifications') ?>
+                </div>
+            </div>
+        </div>
     </div>
 
 <?php else: ?>
