--- a/controllers/plans/_list_toolbar.htm
+++ b/controllers/plans/_list_toolbar.htm
@@ -4,4 +4,9 @@
         class="btn btn-primary oc-icon-plus">
         New Plan
     </a>
+    <a
+        href="<?= Backend::url('responsiv/subscribe/policies') ?>"
+        class="btn btn-default oc-icon-cog">
+        Manage Policies
+    </a>
 </div>
