--- a/controllers/policies/_path_list.htm
+++ b/controllers/policies/_path_list.htm
@@ -1,6 +1,6 @@
 <?php if (count($paths)): ?>
-    <div class="list-preview">
-        <div class="control-list list-unresponsive">
+    <div class="list-preview list-flush">
+        <div class="control-list">
             <table class="table data" data-control="rowlink">
                 <thead>
                     <tr>
