--- a/controllers/policies/create.htm
+++ b/controllers/policies/create.htm
@@ -1,6 +1,6 @@
 <?php Block::put('breadcrumb') ?>
     <ul>
-        <li><a href="<?= Backend::url('responsiv/subscribe/dunnings') ?>">Dunnings</a></li>
+        <li><a href="<?= Backend::url('responsiv/subscribe/policies') ?>">Policies</a></li>
         <li><?= e($this->pageTitle) ?></li>
     </ul>
 <?php Block::endPut() ?>
@@ -19,7 +19,7 @@
                     type="submit"
                     data-request="onSave"
                     data-hotkey="ctrl+s, cmd+s"
-                    data-load-indicator="Creating Dunning..."
+                    data-load-indicator="Creating Policy..."
                     class="btn btn-primary">
                     Create
                 </button>
@@ -28,12 +28,12 @@
                     data-request="onSave"
                     data-request-data="close:1"
                     data-hotkey="ctrl+enter, cmd+enter"
-                    data-load-indicator="Creating Dunning..."
+                    data-load-indicator="Creating Policy..."
                     class="btn btn-default">
                     Create and Close
                 </button>
                 <span class="btn-text">
-                    or <a href="<?= Backend::url('responsiv/subscribe/dunnings') ?>">Cancel</a>
+                    or <a href="<?= Backend::url('responsiv/subscribe/policies') ?>">Cancel</a>
                 </span>
             </div>
         </div>
@@ -43,6 +43,6 @@
 <?php else: ?>
 
     <p class="flash-message static error"><?= e($this->fatalError) ?></p>
-    <p><a href="<?= Backend::url('responsiv/subscribe/dunnings') ?>" class="btn btn-default">Return to dunnings list</a></p>
+    <p><a href="<?= Backend::url('responsiv/subscribe/policies') ?>" class="btn btn-default">Return to policies list</a></p>
 
 <?php endif ?>
