--- a/controllers/policies/update.htm
+++ b/controllers/policies/update.htm
@@ -1,6 +1,6 @@
 <?php Block::put('breadcrumb') ?>
     <ul>
-        <li><a href="<?= Backend::url('responsiv/subscribe/dunnings') ?>">Dunnings</a></li>
+        <li><a href="<?= Backend::url('responsiv/subscribe/policies') ?>">Policies</a></li>
         <li><?= e($this->pageTitle) ?></li>
     </ul>
 <?php Block::endPut() ?>
@@ -20,7 +20,7 @@
                     data-request="onSave"
                     data-request-data="redirect:0"
                     data-hotkey="ctrl+s, cmd+s"
-                    data-load-indicator="Saving Dunning..."
+                    data-load-indicator="Saving Policy..."
                     class="btn btn-primary">
                     <u>S</u>ave
                 </button>
@@ -29,7 +29,7 @@
                     data-request="onSave"
                     data-request-data="close:1"
                     data-hotkey="ctrl+enter, cmd+enter"
-                    data-load-indicator="Saving Dunning..."
+                    data-load-indicator="Saving Policy..."
                     class="btn btn-default">
                     Save and Close
                 </button>
@@ -37,11 +37,11 @@
                     type="button"
                     class="oc-icon-trash-o btn-icon danger pull-right"
                     data-request="onDelete"
-                    data-load-indicator="Deleting Dunning..."
-                    data-request-confirm="Delete this dunning?">
+                    data-load-indicator="Deleting Policy..."
+                    data-request-confirm="Delete this policy?">
                 </button>
                 <span class="btn-text">
-                    or <a href="<?= Backend::url('responsiv/subscribe/dunnings') ?>">Cancel</a>
+                    or <a href="<?= Backend::url('responsiv/subscribe/policies') ?>">Cancel</a>
                 </span>
             </div>
         </div>
@@ -51,6 +51,6 @@
 <?php else: ?>
 
     <p class="flash-message static error"><?= e($this->fatalError) ?></p>
-    <p><a href="<?= Backend::url('responsiv/subscribe/dunnings') ?>" class="btn btn-default">Return to dunnings list</a></p>
+    <p><a href="<?= Backend::url('responsiv/subscribe/policies') ?>" class="btn btn-default">Return to policies list</a></p>
 
 <?php endif ?>
