--- a/controllers/memberships/preview.htm
+++ b/controllers/memberships/preview.htm
@@ -6,24 +6,13 @@
 <?php Block::endPut() ?>
 
 <?php if (!$this->fatalError): ?>
+    <?php
+        $showSchedule = $formModel->plan && $formModel->plan->isRenewable() && $formModel->isActive();
+    ?>
 
     <div class="scoreboard">
         <div data-control="toolbar">
-            <div class="scoreboard-item title-value">
-                <h4>Membership</h4>
-                <p># 1</p>
-                <p class="description">created: now</p>
-            </div>
-            <div class="scoreboard-item title-value">
-                <h4>Status</h4>
-                <p>Active</p>
-                <p class="description">since: now</p>
-            </div>
-            <div class="scoreboard-item title-value">
-                <h4>User</h4>
-                <p>Indiana Jones</p>
-                <p class="description">email: some@guy.com</p>
-            </div>
+            <?= $this->makePartial('preview_scoreboard') ?>
         </div>
     </div>
 
@@ -38,6 +27,9 @@
             <li class="active"><a href="#membership">Membership</a></li>
             <li><a href="#history">History</a></li>
             <li><a href="#notifications">Notifications</a></li>
+            <?php if ($showSchedule): ?>
+                <li><a href="#schedule">Schedule</a></li>
+            <?php endif ?>
         </ul>
         <div class="tab-content">
             <div class="tab-pane pane-inset active">
@@ -55,6 +47,13 @@
                     <?= $this->makePartial('tab_notifications') ?>
                 </div>
             </div>
+            <?php if ($showSchedule): ?>
+                <div class="tab-pane pane-inset">
+                    <div class="padded-container">
+                        <?= $this->makePartial('tab_schedule') ?>
+                    </div>
+                </div>
+            <?php endif ?>
         </div>
     </div>
 
