--- a/controllers/memberships/_tab_membership.htm
+++ b/controllers/memberships/_tab_membership.htm
@@ -1,12 +1,11 @@
 <div class="row">
     <div class="col-sm-4">
-        <!-- <div class="form-preview"> -->
-            <?= $this->formRenderPreview() ?>
-        <!-- </div> -->
+        <?= $this->formRenderPreview() ?>
     </div>
     <div class="col-sm-8">
-        <h3>Payment attempts</h3>
-        <h3>Payment transactions</h3>
-        <h3>Invoices</h3>
+        <div class="field-section">
+            <h4>Invoices</h4>
+        </div>
+        <?= $this->relationRender('invoices') ?>
     </div>
 </div>
