--- a/controllers/memberships/_preview_scoreboard.htm
+++ b/controllers/memberships/_preview_scoreboard.htm
@@ -1,7 +1,7 @@
 <div class="scoreboard-item title-value">
     <h4>Membership</h4>
     <p># <?= $formModel->id ?></p>
-    <p class="description">created: now</p>
+    <p class="description">created: <?= Backend::date($formModel->created_at) ?></p>
 </div>
 <div class="scoreboard-item title-value">
     <h4>Status</h4>
@@ -10,18 +10,18 @@
     <?php else: ?>
         <p>Unknown</p>
     <?php endif ?>
-    <p class="description">since: now</p>
+    <p class="description">since: <?= Backend::date($formModel->status_updated_at) ?></p>
 </div>
-<?php if ($formModel->user): ?>
+<?php if ($user = $formModel->user): ?>
     <?php
-        $userLink = Backend::url('rainlab/user/users/preview/'.$formModel->user->id);
+        $userLink = Backend::url('rainlab/user/users/preview/'.$user->id);
     ?>
     <div class="scoreboard-item title-value">
         <h4>User</h4>
-        <p><?= $formModel->user->name ?></p>
+        <p><?= $user->name ?></p>
         <p class="description">
             <a href="<?= $userLink ?>">
-                <?= $formModel->user->email ?>
+                <?= $user->email ?>
             </a>
         </p>
     </div>
@@ -31,6 +31,18 @@
         <p><em>Unknown user</em></p>
         <p class="description">
             This user may have deactivated their account.
+        </p>
+    </div>
+<?php endif ?>
+
+<?php if ($plan = $formModel->plan): ?>
+    <div class="scoreboard-item title-value">
+        <h4>Plan</h4>
+        <p><?= e($plan->name) ?></p>
+        <p class="description">
+            <a href="<?= Backend::url('responsiv/subscribe/plans/update/'.$plan->id) ?>">
+                view details
+            </a>
         </p>
     </div>
 <?php endif ?>
