--- a/controllers/services/_list_toolbar.htm
+++ b/controllers/services/_list_toolbar.htm
@@ -1,7 +1,7 @@
 <div data-control="toolbar">
     <a
-        href="<?= Backend::url('responsiv/subscribe/plans/create') ?>"
+        href="<?= Backend::url('responsiv/subscribe/services/create') ?>"
         class="btn btn-primary oc-icon-plus">
-        New Plan
+        New Service
     </a>
 </div>
