--- a/controllers/services/preview.htm
+++ b/controllers/services/preview.htm
@@ -1,11 +1,16 @@
 <?php Block::put('breadcrumb') ?>
     <ul>
         <li><a href="<?= Backend::url('responsiv/subscribe/memberships') ?>">Memberships</a></li>
+        <li><a href="<?= Backend::url('responsiv/subscribe/memberships/preview/'.$formModel->membership_id) ?>">Membership #<?= e($formModel->membership_id) ?></a></li>
         <li><?= e($this->pageTitle) ?></li>
     </ul>
 <?php Block::endPut() ?>
 
 <?php if (!$this->fatalError): ?>
+
+    <?php
+        $showSchedule = $formModel->plan && $formModel->plan->isRenewable() && $formModel->isActive();
+    ?>
 
     <div class="scoreboard">
         <div data-control="toolbar">
@@ -21,26 +26,26 @@
 
     <div class="control-tabs content-tabs tabs-inset" data-control="tab">
         <ul class="nav nav-tabs">
-            <li class="active"><a href="#membership">Membership</a></li>
-            <li><a href="#services">Services</a></li>
-            <li><a href="#invoices">Invoices</a></li>
-            <li><a href="#notifications">Notifications</a></li>
+            <li class="active"><a href="#service">Service</a></li>
+            <?php if ($showSchedule): ?>
+                <li><a href="#schedule">Schedule</a></li>
+            <?php endif ?>
+            <li><a href="#history">History</a></li>
         </ul>
         <div class="tab-content">
             <div class="tab-pane pane-inset active">
                 <div class="padded-container">
-                    <?= $this->makePartial('tab_membership') ?>
+                    <?= $this->makePartial('tab_service') ?>
                 </div>
             </div>
-            <div class="tab-pane pane-inset">
-                <?= $this->relationRender('invoices') ?>
-            </div>
-            <div class="tab-pane pane-inset">
-                <?= $this->relationRender('services') ?>
-            </div>
+            <?php if ($showSchedule): ?>
+                <div class="tab-pane pane-inset">
+                    <?= $this->makePartial('tab_schedule') ?>
+                </div>
+            <?php endif ?>
             <div class="tab-pane pane-inset">
                 <div class="padded-container">
-                    <?= $this->makePartial('tab_notifications') ?>
+                    <?= $this->makePartial('tab_history') ?>
                 </div>
             </div>
         </div>
@@ -49,6 +54,6 @@
 <?php else: ?>
 
     <p class="flash-message static error"><?= e($this->fatalError) ?></p>
-    <p><a href="<?= Backend::url('responsiv/subscribe/memberships') ?>" class="btn btn-default">Return to memberships list</a></p>
+    <p><a href="<?= Backend::url('responsiv/subscribe/services') ?>" class="btn btn-default">Return to services list</a></p>
 
 <?php endif ?>
