Ability to create subscriptions

--- a/controllers/services/_preview_scoreboard.htm
+++ b/controllers/services/_preview_scoreboard.htm
@@ -1,5 +1,5 @@
 <div class="scoreboard-item title-value">
-    <h4>Membership</h4>
+    <h4>Service</h4>
     <p># <?= $formModel->id ?></p>
     <p class="description">created: <?= Backend::date($formModel->created_at) ?></p>
 </div>
