--- a/controllers/memberships/_tab_membership.htm
+++ b/controllers/memberships/_tab_membership.htm
@@ -4,12 +4,8 @@
     </div>
     <div class="col-sm-8">
         <div class="field-section">
-            <h4>Recent services</h4>
+            <h4>Services</h4>
         </div>
         <?= $this->relationRender('services') ?>
-        <div class="field-section">
-            <h4>Recent invoices</h4>
-        </div>
-        <?= $this->relationRender('invoices') ?>
     </div>
 </div>
