--- a/controllers/services/_tab_service.htm
+++ b/controllers/services/_tab_service.htm
@@ -4,8 +4,9 @@
     </div>
     <div class="col-sm-8">
         <div class="field-section">
-            <h4>Services</h4>
+            <h4>Invoices</h4>
         </div>
 
+        <?= $this->relationRender('invoices') ?>
     </div>
 </div>
