Add notification logging

--- a/controllers/memberships/index.htm
+++ b/controllers/memberships/index.htm
@@ -2,7 +2,7 @@
     <div data-control="toolbar">
         <div class="scoreboard-item title-value">
             <h4>Total memberships</h4>
-            <p>0</p>
+            <p><?= e($totalMemberships) ?></p>
         </div>
     </div>
 </div>
