Docs and tweaks

--- a/controllers/memberships/_tab_membership.htm
+++ b/controllers/memberships/_tab_membership.htm
@@ -4,7 +4,7 @@
     </div>
     <div class="col-sm-8">
         <div class="field-section">
-            <h4>Services</h4>
+            <h4>Service plans</h4>
         </div>
         <?= $this->relationRender('services') ?>
     </div>
