--- a/controllers/memberships/_tab_membership.htm
+++ b/controllers/memberships/_tab_membership.htm
@@ -3,8 +3,19 @@
         <?= $this->formRenderPreview() ?>
     </div>
     <div class="col-sm-8">
+        <div class="pull-right">
+            <a href="<?= Backend::url('responsiv/subscribe/services/preview/'.$activeService->id) ?>">
+                View all invoices
+            </a>
+        </div>
         <div class="field-section">
-            <h4>Service plans</h4>
+            <h4>Recent invoices</h4>
+        </div>
+        <?= $this->relationRender('active_invoices') ?>
+
+
+        <div class="field-section">
+            <h4>Previous plans</h4>
         </div>
         <?= $this->relationRender('services') ?>
     </div>
