--- a/controllers/memberships/_tab_schedule.htm
+++ b/controllers/memberships/_tab_schedule.htm
@@ -1,5 +1,5 @@
 <?php
-    $schedules = $formModel->getSchedule();
+    $schedules = $activeService->getSchedule();
 ?>
 <div class="control-list">
     <table class="table data" data-control="rowlink">
